--- a/index.html
+++ b/index.html
@@ -127,28 +127,33 @@
         </div>
         <div class = "contact">
             <h1>Contact Me</h1>
-            <div class ="messg">
-                <h2>Contact Me</h2>
+            <div class ="redes">
+                <div class ="insta">
+                    <a href="https://www.instagram.com/andreacontreras30/?utm_medium=copy_link" target="_blank">Instagram</a>
+                </div>
+                <div class = "whatasapp">
+                    <a href="https://wa.me/584242234124" target="_blank">WhatsApp</a>
+                </div>
+                <div class = "mail">
+                    <a href="mailto:contreraslander@gmail.com" target="_blank">Mail</a>
+                </div>
             </div>
-            <div class = "cont">
-                <div class= "cInfo">
-                    <div class ="bx">
-                        <div class="icon"><i class="fa-brands fa-instagram"></i></div>
-                        <div class="txt">
-                            <a href="https://www.instagram.com/andreacontreras30/?utm_medium=copy_link" target="_blank">Instagram</a>
-                        </div>
-                    </div>
-                    <div class ="bx">
-                        <div class="icon"><i class="fa-brands fa-whatsapp"></i></div>
-                        <div class="txt">
-                            <a href="https://wa.me/584242234124" target="_blank">Phone</a>
-                        </div>
-                    </div>
-                    <div class ="bx">
-                        <div class="icon"><i class="fa-solid fa-at"></i></div>
-                        <div class="txt">
-                            <a href="mailto:a.contreras2020@correo.unimet.edu.ve" target="_blank">Mail</a>
-                        </div>
+            <div class="cont">
+                <div class="contact-box">
+                    <div class="left"></div>
+                    <div class="right">
+                        <h2>Send a Message</h2>
+                        <label class ="input-label" for="namedescription">
+                            <input type="text" class="field" id="namedescription" placeholder="Your Name">
+                        </label>
+                        <label for="maildescription">
+                            <input type="text" class="field" id="maildescription" placeholder="Your Email">
+                        </label>
+                        <label for="phonedescription">
+                            <input type="text" class="field" id="phonedescription" placeholder="Phone">
+                        </label>
+                        <textarea placeholder="Message" id = "mssg" class="field"></textarea>
+                        <button type = "click" class="btn" id="btnSend">Send</button>
                     </div>
                 </div>
             </div>
