--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         </a>
         <div class="nav-bar">
             <ul>
-                <li><a href="">hero</a></li>
-                <li><a href="">About Me</a></li>
-                <li><a href="">Experience</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a id="heroB" href="#slide">hero</a></li>
+                <li><a id="aboutMeB" href="#aboutMe">About Me</a></li>
+                <li><a id="experienceB" href="#experiencet">Experience</a></li>
+                <li><a id="skillsB" href="#skillsG">Skills</a></li>
+                <li><a id="contactB" href="#contactMe">Contact</a></li>
 
             </ul>
         </div>
     </nav>
     <div class="container">
-        <div class = "slider">
+        <div class = "slider" id="slide">
             <div class = "slider-items">
                 <div class ="item active">
                     <img src="https://lh3.googleusercontent.com/aJt1yv4KLloI_3rqvSeQM_0X66KH7OspogbCeH8Dreog1J3mfl20p276OHiW-69qvKErAXVsgGpxaah0kMiA-J9WDiQVub9PY-QM940" />
@@ -43,57 +43,25 @@
             <div class="right-slider">></div>
         </div>
 
-        <div class = "about">
+        <div class = "about" id="aboutMe">
             <h1 class = "title">About Me</h1>
             <div class ="foto">
                 <img src="https://lh3.googleusercontent.com/t6y8Prz_GKnLc5bekxB4g4L3_D8OtrvJ6OQqeMKDrjNkd8Bfoay-ROzzDEhEvlDSW5xbcGpUVwO26ZzOil5vkKVOTBEEG1O_auicOBI" />
             </div>
             <div class="info">
-                <p class = "nombre">Mi nombre es Andrea Contreras Lander, naci el 30 de abril del 2001 en Caracas, Venezuela. <br />Me gradue del Colegio Cristo Rey de Altamira y actualmente estudio Ingenieria de Sistemas en la Universidad Metropolitana <br />Mis objetivos a corto plazo son pasar todas las materias de este trimestre <br /> Mis Objetivos a largo plazo es graduarme de Ingenieria de Sistemas en la Universidad Metropolitana <br />Mi principal motivación son las ganas de siempre aprender algo nuevo y superarme ya que el mundo esta en constante desarrollo y uno se tiene que actualizar junto a el <br />Me considero una persona activa, responsable y multitasking</p>
+                <p class = "nombre">Mi nombre es Andrea Contreras Lander, naci el 30 de abril del 2001 en Caracas, Venezuela. <br />Me gradue del Colegio Cristo Rey de Altamira y actualmente estudio Ingenieria de Sistemas en la Universidad Metropolitana. <br />Mis objetivos a corto plazo son pasar todas las materias de este trimestre.<br /> Mis Objetivos a largo plazo es graduarme de Ingenieria de Sistemas en la Universidad Metropolitana. <br />Mi principal motivación son las ganas de siempre aprender algo nuevo y superarme a mi misma ya que el mundo esta en constante desarrollo y uno se tiene que actualizar junto a el. <br />Me considero una persona activa, responsable y multitasking</p>
             </div>
 
         </div>
 
-        <div class = "skills">
+        <div class = "skills" id="skillsG">
             <h1>Software Skills</h1>
-            <div class="box">
-                <p>Python</p>
-                <p>85%</p>
-                <div class="skill">
-                    <div class = "skill_level" style="width: 85%;"></div>
-                </div>
-            </div>
-            <div class="box">
-                <p>Java</p>
-                <p>70%</p>
-                <div class="skill">
-                    <div class = "skill_level" style="width: 70%;"></div>
-                </div>
-            </div>
-            <div class="box">
-                <p>CSS</p>
-                <p>45%</p>
-                <div class="skill">
-                    <div class = "skill_level" style="width: 45%;"></div>
-                </div>
-            </div>
-            <div class="box">
-                <p>HTML</p>
-                <p>45%</p>
-                <div class="skill">
-                    <div class = "skill_level" style="width: 45%;"></div>
-                </div>
-            </div>
-            <div class="box">
-                <p>JavaScript</p>
-                <p>40%</p>
-                <div class="skill">
-                    <div class = "skill_level" style="width: 40%;"></div>
-                </div>
+            <div class="box" id = "skillsBox">
+                
             </div>
         </div>
 
-        <div class="experience">
+        <div class="experience" id="experiencet">
             <h1>Experience</h1>
             <div class="exp1">
                 <h2>Ecape Room</h2>
@@ -125,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <div class = "contact">
+        <div class = "contact" id="contactMe">
             <h1>Contact Me</h1>
             <div class ="redes">
                 <div class ="insta">
